                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 01-04-2005 removed: Old (not working) method of stopping ffwd + rewd on trigger release. 
  - 01-04-2005 changed: Renamed "Nav" view to "Library".
  - 01-04-2005 added: Big List to the Nav Music view at the albums level.
  - 01-04-2005 fixed: vcd's/svcd's autostart only the first movie on a cd
  - 01-04-2005 fixed: [ 1171973 ]  visualisations and screensaver xml have missing end tags (Thanks to jaap3)
  - 01-04-2005 fixed: crash when <value> of a <string> tag in a language file is empty
  - 01-04-2005 updated: Finnish language file (Thnx to jutski)
  - 01-04-2004 updated: Polish language file (Thnx to napek)
  - 01-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 01-04-2005 updated: Chinese (Traditional) language file (Thnx to dog099)
  - 31-03-2005 fixed: kai, crash when removing newly added contact when "just signed in" toast message is still on screen
  - 31-03-2005 fixed: kai, crash when removing last contact
  - 31-03-2005 fixed: kai toast dialog only shows the last notification in the queue
  - 31-03-2005 added: New built-in command XBMC.ReloadSkin()
  - 31-03-2005 fixed: Several translation strings in My Weather.
  - 31-03-2005 added: support for MusicBrainz id's from ogg and mp3 tags
  - 31-03-2005 added: Initial support for SMB share username/password prompting if it's not set in XBoxMediaCenter.xml.  Thanks to BillJam for the patch.
  - 30-03-2005 fixed: Webserver password reset to No Pass did not reset correctly.
  - 30-03-2005 fixed: Srt subtitles out of sync with framerateadjuster enabled after last fix